--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-websockets==12.0
+python-socketio==5.10.0
 gTTS==2.4.0
 SpeechRecognition==3.10.0
 googletrans==3.1.0a0
-python-multipart==0.0.6
-python-socketio==5.10.0
 sounddevice==0.4.6
+soundfile==0.12.1
 numpy==1.26.2
+python-multipart==0.0.6
 aiofiles==23.2.1
-janus==1.0.0
+PyAudio==0.2.14
